# stretch4_body

./: .gitignore  .gitmodules  LICENSE.md  README.md  SUMMARY.md  build_backend.py  get_version.py  meson.build  pyproject.toml
docs/: primer_cameras.md  primer_core.md  primer_gamepad_teleop.md  primer_line_sensor.md  primer_robot_params.md  primer_self_collision.md  primer_status_log.md
stretch4_body/: _cli_wrapper.py  version.py
stretch4_body/behavior/: primer_behaviors.md
stretch4_body/behavior/routines/: routine.py  routine_blind_dock.py  routine_homing.py  routine_manager.py  routine_stow.py
stretch4_body/behavior/safe_motions/: safe_motion.py  safe_motion_manager.py  safe_motion_overtilt_avoid.py
stretch4_body/behavior/sentries/: primer_self_collision.md  sentry.py  sentry_battery_mgmt.py  sentry_cpu_temp.py  sentry_eye_animations.py  sentry_joint_runaway.py  sentry_limit_vel_on_pose.py  sentry_manager.py  sentry_omnibase_guarded_contact.py  sentry_self_collision.py  sentry_status_logger.py  sentry_ubuntu_power_management.py
stretch4_body/behavior/sentries/self_collision/: self_collision_loop.py  self_collision_mujoco.py
stretch4_body/core/: client_server.py  device.py  gamepad_control_mappings.py  gamepad_controller.py  gamepad_enums.py  gamepad_joints.py  gamepad_teleop.py  hello_utils.py  mujoco_urdf.py  primer_gamepad_teleop.md  prismatic_joint.py  rerun_dynamic_plotter.py  rerun_plot.py  robot_monitor.py  robot_params.py  robot_trace.py  scope.py  stepper.py  subsystem_client.py  worker_loop.py
stretch4_body/core/factory/: device_mgmt.py  firmware_available.py  firmware_installed.py  firmware_recommended.py  firmware_updater.py  firmware_utils.py  firmware_version.py  hello_device_utils.py  param_mgmt.py  trace_mgmt.py
stretch4_body/core/feetech/: LICENSE.md  feetech_SM_chain.py  feetech_SM_hello.py  feetech_SM_servo.py  group_sync_read.py  group_sync_write.py  port_handler.py  protocol_packet_handler.py  scscl.py  scservo_def.py  sms_sts.py
stretch4_body/core/feetech/SCSerial/: README.md  SCS.cpp  SCS.h  SCSCL.cpp  SCSerial.cpp  SMSBL.cpp  SMSCL.cpp  SMS_STS.cpp  SMS_STS.h  install_manifest.txt
stretch4_body/core/transport/: cobbs_framing.py  transport.py  transport_cserial.py  transport_pyserial.py  transport_util.py
stretch4_body/core/transport/cpp/: README.md  crc16.cpp  (+5 more)
stretch4_body/media/: LICENSE.md  link_wheel_0.STL  link_wheel_1.STL  link_wheel_2.STL  voice_generate.py
stretch4_body/robot/: primer_robot_client.md  robot.py  robot_client.py  robot_core.py  robot_params_SE4.py  robot_params_SE4UNH.py  robot_server.py
stretch4_body/subsystem/: arm.py  lift.py  omnibase.py  power_periph.py  primer_subsystems.md
stretch4_body/subsystem/cameras/: __init__.py  calibrate_extrinsics_cameras.py  calibrate_extrinsics_lidars.py  calibrate_focus.py  calibrate_intrinsics.py  calibrate_intrinsics_and_extrinsics.py  calibrate_intrinsics_robot_move.py  calibrate_intrinsics_validate_test_dataset.py  camera_intrinsics_validate_l2_distance.py  cv_utils.py  emulated_rgbd.py  luxonis_flash_eeprom.py  luxonis_list_devices.py  primer_cameras.md  show_rgb.py  stream_cameras.py
stretch4_body/subsystem/end_of_arm/: end_of_arm.py  end_of_arm_loop.py  end_of_arm_tools.py  gripper_conversion.py  parallel_gripper.py  primer_end_of_arm.md  stretch_gripper.py  wrist_pitch.py  wrist_roll.py  wrist_yaw.py
stretch4_body/subsystem/line_sensor/: line_sensor_loop.py  line_sensor_model_ae.py  line_sensor_model_ck.py  line_sensor_utils.py  line_sensor_vel_limit.py  pixart_j3_reader.py
stretch4_body/tools/: primer_puppet_teleop.md  stretch_about.py  stretch_arm_home.py  stretch_arm_jog.py  stretch_audio_test.py  stretch_battery_check.py  stretch_body_server.py  stretch_camera_show.py  stretch_change_param.py  stretch_collision_viz.py  stretch_configure_tool.py  stretch_dex_wrist_home.py  stretch_dex_wrist_jog.py  stretch_eoa_power.py  stretch_eye_animations.py  stretch_feetech_monitor.py  stretch_feetech_reboot.py  stretch_gamepad_teleop.py  stretch_gripper_home.py  stretch_gripper_jog.py  stretch_joint_viz.py  stretch_keyboard_omni_teleop.py  stretch_lift_home.py  stretch_lift_jog.py  stretch_line_sensor_viz_3d.py  stretch_omni_base_jog.py  stretch_params.py  stretch_power_periph_jog.py  stretch_power_periph_scope.py  stretch_puppet_teleop.py  stretch_rgbd_show.py  stretch_robot_home.py  stretch_robot_rates.py  stretch_robot_stow.py  stretch_runstop.py  stretch_status_viz.py  stretch_wrist_pitch_home.py  stretch_wrist_roll_home.py  stretch_wrist_yaw_home.py
stretch4_body/tools/factory/: REx_actuator_control.py  REx_base_contact_calibration.py  REx_base_tuning.py  REx_camera_calibrate.py  REx_camera_focus.py  REx_camera_list.py  REx_dmesg_monitor.py  REx_feetech_backlash_measure.py  REx_feetech_id_change.py  REx_feetech_id_scan.py  REx_feetech_jog.py  REx_feetech_reboot.py  REx_feetech_set_baud.py  REx_firebase_jog.py  REx_firmware_flash.py  REx_firmware_updater.py  REx_imu_viz.py  REx_joint_sweep.py  REx_line_sensor_calibrate.py  REx_monitor_robot_temp.py  REx_omnibase_calibrate_imu_collect.py  REx_omnibase_calibrate_imu_process.py  REx_routines_run.py  REx_status_log_plot.py  REx_stepper_calibration_YAML_to_flash.py  REx_stepper_calibration_flash_to_YAML.py  REx_stepper_calibration_run.py  REx_stepper_contact_calibration.py  REx_stepper_gains_YAML_to_flash.py  REx_stepper_gains_read.py  REx_stepper_jog.py  REx_stepper_type.py  REx_xrandr_display.py  test_firmware_available.py
stretch4_body/utils/: file_access_utils.py  freeable_file_lock.py  thread_safe_dict.py
test/: test_cameras.py  test_command_overwriting.py  test_dynamic_plotter.py  test_file_access_utils.py  test_gamepad_filtering.py  test_logger_throttle.py  test_multiprocess_circular_queue.py  test_require_connection.py  test_robot_client.py  test_routine_cancel.py  test_server_logging.py  test_server_rate_drop.py  test_transport_cpp.py
test/bak/: test_pimu_transport.py  test_stepper_transport.py  test_streaming_client.py  test_streaming_server.py  test_streaming_server2.py  test_transport_cpp.py
(+20 files in other folders)
